# file-system-agent

./: .gitignore  Makefile  README.md  agent.py  config.py  pyproject.toml  tests.py  tool.py
