[tool.poetry]
name = "llm-file-system-tool"
version = "0.1.0"
description = "A local file system agent with multi-step organization capabilities."
authors = ["Taha Ashtiani <taha.m.ashtiani@gmail.com>"]
package-mode = false


[tool.poetry.dependencies]
python = ">=3.12,<3.13"
langchain = "^0.3.14"
langchain-community = "^0.3.14"
langchain-google-vertexai = "^2.0.14"
pydantic = "^2.10.3"
langgraph = "^0.2.64"
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
